--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,7 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// Install NPM dependencies.
 	"postCreateCommand": "pip install -r requirements.txt",
-	"postStartCommand": "streamlit hello",
+        "postStartCommand": "streamlit run app.py",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
